chore(i18n): More granularity for new translations

--- a/packages/i18n/src/locales/de/components/common.yaml
+++ b/packages/i18n/src/locales/de/components/common.yaml
@@ -1,4 +1,9 @@
 ---
+account: Account
+blog: Blog
+community: Community
 designs: Entwurf
+docs: Dokumentation
+showcase: Galerie
 sloganCome: Komm für die Schnittmuster
 sloganStay: Bleib für die Community
