--- a/packages/i18n/src/locales/fr/components/common.yaml
+++ b/packages/i18n/src/locales/fr/components/common.yaml
@@ -1,4 +1,9 @@
 ---
+account: Mon Compte
+blog: Blog
+community: Communauté
 designs: Designs
-sloganCome: Come for the sewing patterns
-sloganStay: Stay for the community
+docs: Documentation
+showcase: Galerie
+sloganCome: Venez pour les patrons de couture
+sloganStay: Restez pour la communauté
