--- a/packages/i18n/src/locales/nl/components/common.yaml
+++ b/packages/i18n/src/locales/nl/components/common.yaml
@@ -1,4 +1,9 @@
 ---
+account: Account
+blog: Blog
+community: Community
 designs: Designs
-sloganCome: Come for the sewing patterns
-sloganStay: Stay for the community
+docs: Documentatie
+showcase: Voorbeelden
+sloganCome: Kom voor de naaipatronen
+sloganStay: Blijf voor de community
