--- a/packages/i18n/src/locales/en/components/common.yaml
+++ b/packages/i18n/src/locales/en/components/common.yaml
@@ -1,3 +1,8 @@
+account: Account
+blog: Blog
+commumity: Community
 designs: Designs
+docs: Documentation
+showcase: Showcase
 sloganCome: Come for the sewing patterns
 sloganStay: Stay for the community
