--- a/packages/i18n/src/locales/es/components/common.yaml
+++ b/packages/i18n/src/locales/es/components/common.yaml
@@ -1,4 +1,9 @@
 ---
-designs: Designs
-sloganCome: Come for the sewing patterns
-sloganStay: Stay for the community
+account: Cuenta
+blog: Blog
+community: Comunidad
+designs: Diseños
+docs: Documentación
+showcase: Escaparate
+sloganCome: Ven por los patrones de costura
+sloganStay: Quédate por la comunidad
