chore(i18n): Restructuring strings

--- a/packages/i18n/src/locales/de/components/common.yaml
+++ b/packages/i18n/src/locales/de/components/common.yaml
@@ -4,6 +4,9 @@ blog: Blog
 community: Community
 designs: Entwurf
 docs: Dokumentation
+patternInstructions: Anleitungen für das Schnittmuster
+patternOptions: Schnittmusteroptionen
+requiredMeasurements: Erforderliche Maße
 showcase: Galerie
 sloganCome: Komm für die Schnittmuster
 sloganStay: Bleib für die Community
