--- a/packages/i18n/src/locales/es/components/common.yaml
+++ b/packages/i18n/src/locales/es/components/common.yaml
@@ -4,6 +4,9 @@ blog: Blog
 community: Comunidad
 designs: Diseños
 docs: Documentación
+patternInstructions: Intrucciones de los patrones
+patternOptions: Opciones del patrón
+requiredMeasurements: Medidas requeridas
 showcase: Escaparate
 sloganCome: Ven por los patrones de costura
 sloganStay: Quédate por la comunidad
