--- a/packages/i18n/src/locales/fr/components/common.yaml
+++ b/packages/i18n/src/locales/fr/components/common.yaml
@@ -4,6 +4,9 @@ blog: Blog
 community: Communauté
 designs: Designs
 docs: Documentation
+patternInstructions: Documentation du patron
+patternOptions: Options du patron
+requiredMeasurements: Mensurations requises
 showcase: Galerie
 sloganCome: Venez pour les patrons de couture
 sloganStay: Restez pour la communauté
