--- a/packages/i18n/src/locales/nl/components/common.yaml
+++ b/packages/i18n/src/locales/nl/components/common.yaml
@@ -4,6 +4,9 @@ blog: Blog
 community: Community
 designs: Designs
 docs: Documentatie
+patternInstructions: Patroon instructies
+patternOptions: Patroon opties
+requiredMeasurements: Vereiste maten
 showcase: Voorbeelden
 sloganCome: Kom voor de naaipatronen
 sloganStay: Blijf voor de community
