--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -23,23 +23,21 @@
   ],
   "main": "dist/index.js",
   "scripts": {
-    "clean": "rimraf dist",
     "build": "node build.js",
-    "mbuild": "NO_MINIFY=1 node build.js",
-    "vbuild": "VERBOSE=1 node build.js",
     "cibuild_step1": "node build.js",
-    "test": "BABEL_ENV=production npx mocha tests/*.test.mjs --require @babel/register",
+    "clean": "rimraf dist",
+    "mbuild": "NO_MINIFY=1 node build.js",
     "symlink": "mkdir -p ./node_modules/@freesewing && cd ./node_modules/@freesewing && ln -s -f ../../../* . && cd -",
-    "testci": "BABEL_ENV=production npx mocha tests/*.test.mjs --require @babel/register --reporter ../../tests/reporters/terse.js",
-    "prebuild": "node src/prebuild.mjs"
+    "test": "BABEL_ENV=production npx mocha tests/*.test.mjs --require @babel/register",
+    "vbuild": "VERBOSE=1 node build.js",
+    "prebuild": "node src/prebuild.mjs",
+    "testci": "BABEL_ENV=production npx mocha tests/*.test.mjs --require @babel/register --reporter ../../tests/reporters/terse.js"
   },
   "peerDependencies": {
     "@freesewing/pattern-info": "^2.20.8"
   },
   "dependencies": {},
   "devDependencies": {
-    "esbuild": "^0.14.43",
-    "esbuild-plugin-yaml": "^0.0.1",
     "js-yaml": "^4.1.0"
   },
   "files": [
