--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freesewing/i18n",
-  "version": "2.21.0-alpha.0",
+  "version": "2.21.0-rc.0",
   "description": "Translations for the FreeSewing project",
   "author": "Joost De Cock <joost@joost.at> (https://github.com/joostdecock)",
   "homepage": "https://freesewing.org/",
@@ -34,7 +34,7 @@
     "testci": "BABEL_ENV=production npx mocha tests/*.test.mjs --require @babel/register --reporter ../../tests/reporters/terse.js"
   },
   "peerDependencies": {
-    "@freesewing/pattern-info": "^2.21.0-alpha.0"
+    "@freesewing/pattern-info": "^2.21.0-rc.0"
   },
   "dependencies": {},
   "devDependencies": {
