chore: Reconfigure packages

--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -44,8 +44,7 @@
   },
   "files": [
     "dist/*",
-    "README.md",
-    "package.json"
+    "README.md"
   ],
   "publishConfig": {
     "access": "public",
