chore(i18n): more translations

--- a/packages/i18n/src/locales/en/patterns.yml
+++ b/packages/i18n/src/locales/en/patterns.yml
@@ -76,6 +76,9 @@ lucy:
 lunetius:
   description: Lunetius is a lacerna, a historical Roman cloak
   title: Lunetius Lacerna
+noble:
+  description: Noble is a body block with prince(ess) seams
+  title: Noble body block
 paco:
   description: Paco are casual yet stylish summer pants.
   title: Paco pants
