--- a/packages/i18n/src/locales/es/patterns.yml
+++ b/packages/i18n/src/locales/es/patterns.yml
@@ -77,6 +77,9 @@ lucy:
 lunetius:
   description: Lunetius es una lacerna, una capa histórica romana
   title: Lunetius, lacerna
+noble:
+  description: Noble is a body block with prince(ess) seams
+  title: Noble body block
 paco:
   description: Paco son pantalones de verano casual pero con estilo.
   title: Paco, pantalones largos
