--- a/packages/i18n/src/locales/de/patterns.yml
+++ b/packages/i18n/src/locales/de/patterns.yml
@@ -77,6 +77,9 @@ lucy:
 lunetius:
   description: Lunetius ist eine Lacerna, ein historischer römischer Mantel
   title: Lunetius, die Lacerna
+noble:
+  description: Noble is a body block with prince(ess) seams
+  title: Noble body block
 paco:
   description: Paco ist eine lässige, aber stilvolle Sommerhose.
   title: Paco, die Hose
